--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,6 +13,7 @@
     "fastify": "^5.6.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.6",
     "@types/node": "^24.9.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.6",
